<resources>
    <string name="app_name">Wazpital</string>
    <string name="google_maps_key">AIzaSyDVpg7Cnf-k4oqaqV7GJtyks7TbsV9KJsA</string>

    <!-- MainActivity -->
    <string name="main_hospital_image_description">Imagem de perfil do hospital</string>
    <string name="main_no_connection">Você não está conectado à internet, algumas coisas podem apresentar mal funcionamento</string>
    <string name="main_search">Buscar...</string>

    <!-- DetailsActivity -->
    <string name="details_hospital_not_found">Desculpe, mas não conseguimos mostrar esse hospital</string>
    <string name="details_could_not_open_maps">Desculpe, mas não conseguimos abrir esse hospital no mapa</string>
    <string name="details_could_not_call_phone">Desculpe, mas não conseguimos chamar esse número</string>
    <string name="details_could_not_send_email">Desculpe, mas não conseguimos enviar esse e-mail</string>
    <string name="details_could_not_open_browser">Desculpe, mas não conseguimos abrir o seu browser</string>
    <string name="details_could_not_retrieve_location">Não foi possível resgatar a distância. Você ainda pode ver o mapa!</string>
    <string name="details_distance">Distância Aproximada</string>
    <string name="details_description">Descrição</string>
    <string name="details_address">Endereço</string>
    <string name="details_contacts">Mais Informações</string>
    <string name="details_contact_email">E-mail:</string>
    <string name="details_contact_phone">Telefone:</string>
    <string name="details_contact_site">Site:</string>
    <string name="details_see_maps">Ver no Mapa</string>
    <string name="details_back_arrow">Voltar</string>

    <!-- Hospital States -->
    <string name="hospital_state_recommended">Recomendado</string>
    <string name="hospital_state_complicated">Aceitável</string>
    <string name="hospital_state_bad">Não Recomendado</string>
</resources>
