<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <ImageView
                android:id="@+id/hospital_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/main_hospital_image_description"
                android:scaleType="centerCrop" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_arrow_back"
                android:contentDescription="@string/details_back_arrow"
                android:padding="16dp"
                android:background="@color/trasnparent"
                android:onClick="back"/>

            <TextView
                android:id="@+id/hospital_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textColor="@color/white"
                android:background="@color/fadedBlack"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/hospital_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/white"
            android:textAppearance="?android:textAppearanceSmall"
            android:textStyle="bold"/>

        <ScrollView
            android:id="@+id/hospital_scroll_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/HospitalDetailTitle"
                    android:text="@string/details_description"/>
                <TextView
                    android:id="@+id/hospital_description"
                    style="@style/HospitalDetailContent" />


                <TextView
                    style="@style/HospitalDetailTitle"
                    android:text="@string/details_address"/>
                <TextView
                    android:id="@+id/hospital_address"
                    style="@style/HospitalDetailContent" />

                <Button
                    style="@style/HospitalDefaultButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_see_maps"
                    android:drawableLeft="@mipmap/ic_pin_drop"
                    android:drawableStart="@mipmap/ic_pin_drop"
                    android:layout_gravity="right"
                    android:onClick="openMaps"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    style="@style/HospitalDetailTitle"
                    android:text="@string/details_contacts"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/contacts_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/details_fab_rate"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:clickable="true"
        android:onClick="showRateButtons"
        android:src="@mipmap/ic_thumbs_up_down"
        app:backgroundTint="@color/colorAccent"
        app:layout_anchor="@id/hospital_image"
        app:layout_anchorGravity="bottom|right|end"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/details_fab_recommended"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@mipmap/ic_mood"
        android:clickable="true"
        android:visibility="invisible"
        app:backgroundTint="@color/recommendedGreen"
        app:layout_anchor="@id/details_fab_rate"
        app:layout_anchorGravity="bottom"
        android:onClick="doRecommendedAction"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/details_fab_complicated"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@mipmap/ic_sentiment_neutral"
        android:clickable="true"
        android:visibility="invisible"
        app:backgroundTint="@color/complicatedYellow"
        app:layout_anchor="@id/details_fab_recommended"
        app:layout_anchorGravity="bottom"
        android:onClick="doComplicatedAction"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/details_fab_bad"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@mipmap/ic_mood_bad"
        android:clickable="true"
        android:visibility="invisible"
        app:backgroundTint="@color/badRed"
        app:layout_anchor="@id/details_fab_complicated"
        app:layout_anchorGravity="bottom"
        android:onClick="doBadAction"/>

</android.support.design.widget.CoordinatorLayout>